# climate-target-extraction

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/experiments/: cache_only_validation_nvda_aapl_2024.toml  local_parser_validation_nvda_aapl_2024.toml  parity_no_rag_v1.toml  parity_rag_v1.toml  parity_rag_v1_baseline.toml  track_a_setup_a1.toml  track_b_setup_b1.toml  track_d_setup_d1.toml  track_e_setup_e1_cleanup.toml  track_e_setup_e2_pymupdf_cleanup.toml  track_e_setup_e2a_cleanup_refill_subset.toml  track_e_setup_e2a_pymupdf_cleanup.toml  track_e_setup_e2a_pymupdf_cleanup_slice.toml  track_e_setup_e2b_pymupdf_cleanup.toml  track_e_setup_e2c_pymupdf_cleanup.toml  track_e_setup_e2d_prefill_materialize_error.toml  track_e_setup_e2d_prefill_page_cache_call_llm.toml  track_f_setup_f1_prompt_cache_on.toml  (+8 more)
docs/: BASELINES.md  E2A_CLEANUP_REPAIR_RUNBOOK.md  EXPERIMENTAL_STRATEGY.md  MONITORING.md  PDF_EXTRACTION.md  TASKS.md
notebooks/: 01_Mag7_Climate_Targets_SBTi.ipynb  02_Mag7_Climate_Targets_gpt_5_x_no_RAG.ipynb  03_Mag7_Climate_Targets_gpt_5_x_RAG_baseline.ipynb
scripts/: evaluate_resumable.py  run_pdf_conversion_sidequest.py
tests/: test_baseline_suggestions.py  test_cli_audit_existing.py  test_cli_evaluate_discovery.py  test_cli_progress.py  test_cli_smoke.py  test_cli_status.py  test_contracts.py  test_dashboard_app.py  test_dashboard_data.py  test_env_loading.py  test_index_reuse.py  test_lineage.py  test_parse_cache.py  test_prompt_cache.py  test_rag_local_cleanup.py  test_reporting_audit.py  test_retrieval_rerank.py  test_target_postprocess.py
(+380 files in other folders)
